# maxP

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DESIGN.md  parametrization_policy.md  research_context.md  verify.md  verify.py
examples/: visualize.py
examples/mlp_training/: config.yaml  config_baseline.yaml  sweep.py  sweep_config.yaml  train.py
examples/vit_training/: config.yaml  config_baseline.yaml  run_sweep.sh  sweep_config.yaml  train.py
examples_new/: coord_check.py  coord_check_pm.py  dag_solver_demo.py  diagnose.py  mlp_example.py  parameterized_transformer.py  trace_example.py  transformer.py  visualize_dag.py
examples_new/dynamic_mlp_example/: parametrized_mlp.py  sweep.py
examples_new/dynamic_vit_example/: sweep.py
examples_new/mlp_example/: mlp.py  mup_vs_maxp.py  train.py
examples_new/parameterize_example/: TUTORIAL.md  parameterized_transformer.py  run.py  transformer.py
examples_new/repro_nanogpt_mup/: verify_scaling.py
examples_new/vit_example/: parametrized_vit.py  train.py  vit.py
maxp/: __init__.py  alignment.py  scheduler.py  solver.py  tracer.py  utils.py
maxp_new/: __init__.py  alignment.py  dag.py  diagnose.py  module.py  parametrization.py  solver.py  trace.py  utils.py
tests/: test_alignment.py  test_alignment_new.py  test_dag.py  test_dag_solver_properties.py  test_init_weights.py  test_parametrization.py  test_scheduler.py  test_smoke.py  test_solver.py  test_step.py  test_tracer.py
